--- a/Storyboard.storyboard
+++ b/Storyboard.storyboard
@@ -79,10 +79,26 @@
                                     <action selector="start:" destination="OVg-Q5-MDi" eventType="touchUpInside" id="aki-6E-NUj"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="f5l-7U-upM">
+                                <rect key="frame" x="58" y="280" width="197" height="44"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="Connect">
+                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="connectPeripheral:" destination="OVg-Q5-MDi" eventType="touchUpInside" id="o8e-Fi-iyu"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
                     <connections>
+                        <outlet property="connectButton" destination="f5l-7U-upM" id="cdr-Gd-s9C"/>
                         <outlet property="deviceName" destination="TyC-pN-zCR" id="eaF-Po-yK2"/>
                     </connections>
                 </viewController>
@@ -493,87 +509,6 @@
     <resources>
         <image name="coinbase-logo.png" width="240" height="56"/>
     </resources>
-    <classes>
-        <class className="BTC2AttachWalletViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/BTC2AttachWalletViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="attachWallet:"/>
-            </relationships>
-        </class>
-        <class className="BTC2CircleLayout" superclassName="UICollectionViewLayout">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/BTC2CircleLayout.h"/>
-        </class>
-        <class className="BTC2DebugViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/BTC2DebugViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="start:"/>
-                <relationship kind="action" name="startCentral:"/>
-                <relationship kind="action" name="startPeripheralMode:"/>
-                <relationship kind="action" name="stop:"/>
-                <relationship kind="outlet" name="deviceName" candidateClass="UILabel"/>
-            </relationships>
-        </class>
-        <class className="BTC2NameViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/BTC2NameViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="updateName:"/>
-                <relationship kind="outlet" name="nameField" candidateClass="UITextField"/>
-                <relationship kind="outlet" name="roboView" candidateClass="BTC2RobotView"/>
-            </relationships>
-        </class>
-        <class className="BTC2NewTransactionViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/BTC2NewTransactionViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="sendBitcoin:"/>
-                <relationship kind="outlet" name="btcInputField" candidateClass="UITextField"/>
-                <relationship kind="outlet" name="createTransactionButton" candidateClass="UIButton"/>
-                <relationship kind="outlet" name="equivalentValueLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="titleLabel" candidateClass="UILabel"/>
-            </relationships>
-        </class>
-        <class className="BTC2RobotView" superclassName="UIView">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/BTC2RobotView.h"/>
-            <relationships>
-                <relationship kind="outlet" name="nameLabel" candidateClass="UILabel"/>
-            </relationships>
-        </class>
-        <class className="BTC2RobotViewCell" superclassName="UICollectionViewCell">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/BTC2RobotViewCell.h"/>
-            <relationships>
-                <relationship kind="outlet" name="roboView" candidateClass="BTC2RobotView"/>
-            </relationships>
-        </class>
-        <class className="BTC2TransactionCell" superclassName="UITableViewCell">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/BTC2TransactionCell.h"/>
-            <relationships>
-                <relationship kind="outlet" name="amountLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="createDateLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="otherLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="statusLabel" candidateClass="UILabel"/>
-            </relationships>
-        </class>
-        <class className="BTC2TransactionsViewController" superclassName="UITableViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/BTC2TransactionsViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="close:"/>
-            </relationships>
-        </class>
-        <class className="BTC2WorldViewController" superclassName="UICollectionViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/BTC2WorldViewController.h"/>
-        </class>
-        <class className="UICollectionReusableView" superclassName="UIView">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/UICollectionReusableView.h"/>
-        </class>
-        <class className="UICollectionViewCell" superclassName="UICollectionReusableView">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/UICollectionViewCell.h"/>
-        </class>
-        <class className="UICollectionViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/UICollectionViewController.h"/>
-        </class>
-        <class className="UICollectionViewLayout" superclassName="NSObject">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/UICollectionViewLayout.h"/>
-        </class>
-    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
