Incorporate BTC2 into demo app. Generalize main thread execution code.

--- a/Storyboard.storyboard
+++ b/Storyboard.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="12E55" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="OVg-Q5-MDi">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="12E55" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="Abq-DI-rb0">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="2083"/>
     </dependencies>
@@ -157,7 +157,7 @@
                                     <action selector="updateName:" destination="RQC-ky-OUr" eventType="touchUpInside" id="ogy-6D-4xd"/>
                                 </connections>
                             </button>
-                            <view contentMode="center" id="H85-t0-lPt" customClass="BTC2RobotView">
+                            <view contentMode="center" id="H85-t0-lPt" customClass="BTC2AvatarView">
                                 <rect key="frame" x="80" y="193" width="160" height="160"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
@@ -230,17 +230,21 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <collectionViewLayout key="collectionViewLayout" id="c6S-p8-Ka1" customClass="BTC2CircleLayout"/>
                         <cells>
-                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="RoboCell" id="bQl-07-tPb" customClass="BTC2RobotViewCell">
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="RoboCell" id="bQl-07-tPb" customClass="BTC2AvatarViewCell">
                                 <rect key="frame" x="0.0" y="0.0" width="98" height="96"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                                     <rect key="frame" x="0.0" y="0.0" width="98" height="96"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <view contentMode="scaleToFill" id="frC-tZ-C2N" customClass="BTC2RobotView">
+                                        <view contentMode="scaleToFill" id="frC-tZ-C2N" customClass="BTC2AvatarView">
                                             <rect key="frame" x="0.0" y="0.0" width="98" height="96"/>
                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                             <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" id="zIU-C2-7em">
+                                                    <rect key="frame" x="24" y="24" width="49" height="48"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                </imageView>
                                                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsLetterSpacingToFitWidth="YES" adjustsFontSizeToFit="NO" id="HZZ-ck-AY4">
                                                     <rect key="frame" x="0.0" y="75" width="98" height="21"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -253,6 +257,7 @@
                                             </subviews>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                             <connections>
+                                                <outlet property="imageView" destination="zIU-C2-7em" id="5Kh-pt-dYu"/>
                                                 <outlet property="nameLabel" destination="HZZ-ck-AY4" id="k3S-s7-7SB"/>
                                             </connections>
                                         </view>
@@ -261,7 +266,7 @@
                                 </view>
                                 <size key="customSize" width="98" height="96"/>
                                 <connections>
-                                    <outlet property="roboView" destination="frC-tZ-C2N" id="Pab-me-gUK"/>
+                                    <outlet property="avatarView" destination="frC-tZ-C2N" id="Evf-du-bZ5"/>
                                 </connections>
                             </collectionViewCell>
                         </cells>
@@ -524,6 +529,83 @@
     <resources>
         <image name="coinbase-logo.png" width="240" height="56"/>
     </resources>
+    <classes>
+        <class className="BTC2AttachWalletViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/BTC2AttachWalletViewController.h"/>
+        </class>
+        <class className="BTC2AvatarView" superclassName="UIView">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/BTC2AvatarView.h"/>
+            <relationships>
+                <relationship kind="outlet" name="imageView" candidateClass="UIImageView"/>
+                <relationship kind="outlet" name="nameLabel" candidateClass="UILabel"/>
+            </relationships>
+        </class>
+        <class className="BTC2AvatarViewCell" superclassName="UICollectionViewCell">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/BTC2AvatarViewCell.h"/>
+            <relationships>
+                <relationship kind="outlet" name="avatarView" candidateClass="BTC2AvatarView"/>
+            </relationships>
+        </class>
+        <class className="BTC2CircleLayout" superclassName="UICollectionViewLayout">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/BTC2CircleLayout.h"/>
+        </class>
+        <class className="BTC2DebugViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/BTC2DebugViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="connectPeripheral:"/>
+                <relationship kind="action" name="requestBtc:"/>
+                <relationship kind="action" name="sendNotice:"/>
+                <relationship kind="action" name="startCentral:"/>
+                <relationship kind="action" name="startPeripheralMode:"/>
+                <relationship kind="action" name="stop:"/>
+                <relationship kind="outlet" name="connectButton" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="deviceName" candidateClass="UILabel"/>
+            </relationships>
+        </class>
+        <class className="BTC2NameViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/BTC2NameViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="nameField" candidateClass="UITextField"/>
+                <relationship kind="outlet" name="roboView" candidateClass="BTC2AvatarView"/>
+            </relationships>
+        </class>
+        <class className="BTC2NewTransactionViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/BTC2NewTransactionViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="btcInputField" candidateClass="UITextField"/>
+                <relationship kind="outlet" name="createTransactionButton" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="equivalentValueLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="titleLabel" candidateClass="UILabel"/>
+            </relationships>
+        </class>
+        <class className="BTC2TransactionCell" superclassName="UITableViewCell">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/BTC2TransactionCell.h"/>
+            <relationships>
+                <relationship kind="outlet" name="amountLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="createDateLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="otherLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="statusLabel" candidateClass="UILabel"/>
+            </relationships>
+        </class>
+        <class className="BTC2TransactionsViewController" superclassName="UITableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/BTC2TransactionsViewController.h"/>
+        </class>
+        <class className="BTC2WorldViewController" superclassName="UICollectionViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/BTC2WorldViewController.h"/>
+        </class>
+        <class className="UICollectionReusableView" superclassName="UIView">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/UICollectionReusableView.h"/>
+        </class>
+        <class className="UICollectionViewCell" superclassName="UICollectionReusableView">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/UICollectionViewCell.h"/>
+        </class>
+        <class className="UICollectionViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/UICollectionViewController.h"/>
+        </class>
+        <class className="UICollectionViewLayout" superclassName="NSObject">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/UICollectionViewLayout.h"/>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
