--- a/Storyboard.storyboard
+++ b/Storyboard.storyboard
@@ -333,6 +333,7 @@
                         <outlet property="btcInputField" destination="zuo-jh-2Qz" id="CHO-ie-5hr"/>
                         <outlet property="createTransactionButton" destination="h2l-w5-qsK" id="oAv-zc-ogB"/>
                         <outlet property="equivalentValueLabel" destination="09b-ev-WZ3" id="sFi-4s-q4S"/>
+                        <outlet property="sendButton" destination="h2l-w5-qsK" id="JRK-kg-TKU"/>
                         <outlet property="titleLabel" destination="bvZ-VD-gGr" id="cy2-S0-cPr"/>
                     </connections>
                 </viewController>
@@ -529,84 +530,6 @@
     <resources>
         <image name="coinbase-logo.png" width="240" height="56"/>
     </resources>
-    <classes>
-        <class className="BTC2AttachWalletViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/BTC2AttachWalletViewController.h"/>
-        </class>
-        <class className="BTC2AvatarView" superclassName="UIView">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/BTC2AvatarView.h"/>
-            <relationships>
-                <relationship kind="outlet" name="imageView" candidateClass="UIImageView"/>
-                <relationship kind="outlet" name="nameLabel" candidateClass="UILabel"/>
-            </relationships>
-        </class>
-        <class className="BTC2AvatarViewCell" superclassName="UICollectionViewCell">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/BTC2AvatarViewCell.h"/>
-            <relationships>
-                <relationship kind="outlet" name="avatarView" candidateClass="BTC2AvatarView"/>
-            </relationships>
-        </class>
-        <class className="BTC2CircleLayout" superclassName="UICollectionViewLayout">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/BTC2CircleLayout.h"/>
-        </class>
-        <class className="BTC2DebugViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/BTC2DebugViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="connectPeripheral:"/>
-                <relationship kind="action" name="requestBtc:"/>
-                <relationship kind="action" name="sendNotice:"/>
-                <relationship kind="action" name="startCentral:"/>
-                <relationship kind="action" name="startPeripheralMode:"/>
-                <relationship kind="action" name="stop:"/>
-                <relationship kind="outlet" name="connectButton" candidateClass="UIButton"/>
-                <relationship kind="outlet" name="deviceName" candidateClass="UILabel"/>
-            </relationships>
-        </class>
-        <class className="BTC2NameViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/BTC2NameViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="updateName:"/>
-                <relationship kind="outlet" name="nameField" candidateClass="UITextField"/>
-                <relationship kind="outlet" name="roboView" candidateClass="BTC2AvatarView"/>
-            </relationships>
-        </class>
-        <class className="BTC2NewTransactionViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/BTC2NewTransactionViewController.h"/>
-            <relationships>
-                <relationship kind="outlet" name="btcInputField" candidateClass="UITextField"/>
-                <relationship kind="outlet" name="createTransactionButton" candidateClass="UIButton"/>
-                <relationship kind="outlet" name="equivalentValueLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="titleLabel" candidateClass="UILabel"/>
-            </relationships>
-        </class>
-        <class className="BTC2TransactionCell" superclassName="UITableViewCell">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/BTC2TransactionCell.h"/>
-            <relationships>
-                <relationship kind="outlet" name="amountLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="createDateLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="otherLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="statusLabel" candidateClass="UILabel"/>
-            </relationships>
-        </class>
-        <class className="BTC2TransactionsViewController" superclassName="UITableViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/BTC2TransactionsViewController.h"/>
-        </class>
-        <class className="BTC2WorldViewController" superclassName="UICollectionViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/BTC2WorldViewController.h"/>
-        </class>
-        <class className="UICollectionReusableView" superclassName="UIView">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/UICollectionReusableView.h"/>
-        </class>
-        <class className="UICollectionViewCell" superclassName="UICollectionReusableView">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/UICollectionViewCell.h"/>
-        </class>
-        <class className="UICollectionViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/UICollectionViewController.h"/>
-        </class>
-        <class className="UICollectionViewLayout" superclassName="NSObject">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/UICollectionViewLayout.h"/>
-        </class>
-    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
